--- a/kerko/templates/kerko/search-item.html.jinja2
+++ b/kerko/templates/kerko/search-item.html.jinja2
@@ -11,7 +11,7 @@
             {%- if is_searching %}
                 {{- _("Your search") }}
             {%- else %}
-                {{- _("Full bibliography") }}
+                {{- _("Full library") }}
             {%- endif -%}
         </h1>
         {%- if back_url %}
